# machine-learning-zoomcamp

./: README.md  pyproject.toml
machine-learning-zoomcamp/01_intro/: hw.ipynb
machine-learning-zoomcamp/02_regression/: california_housing_price_prediction.ipynb  coursework.ipynb  hw.ipynb
machine-learning-zoomcamp/03_classification/: course.ipynb  coursework.ipynb  hw.ipynb
machine-learning-zoomcamp/04_evaluation_classification/: coursework.ipynb  hw.ipynb
machine-learning-zoomcamp/05_deploying_ml_models/: Dockerfile  Pipfile  coursework.ipynb  customer.json  ping.py  predict.py  test_predict.ipynb  test_predict.py  train.py
machine-learning-zoomcamp/05_homework/: Dockerfile  Pipfile  predict.py  test_predict.py
machine-learning-zoomcamp/06_decision_trees_and_ensemble_learning/: coursework.ipynb  hw.ipynb
