[tool.poetry]
name = "machine-learning-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Sheila Mbadi <mbadisheila@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
plotly = "^5.24.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
